--- a/client/styles/pages/proposals.scss
+++ b/client/styles/pages/proposals.scss
@@ -27,4 +27,12 @@
         margin-top: 10px;
         color: $text-color-light;
     }
+    @include sm-max {
+        .stats-container {
+            padding-bottom: 0;
+        }
+        .cui-col-xs-6 {
+            margin-bottom: 18px;
+        }
+    }
 }
